# ChangeLog for dev-util/schroot
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/schroot/ChangeLog,v 1.14 2010/02/13 22:29:07 abcd Exp $

  13 Feb 2010; Jonathan Callen <abcd@gentoo.org> schroot-1.4.0.ebuild:
  Remove RESTRICT=mirror, was only meant for local testing

*schroot-1.4.0 (31 Jan 2010)

  31 Jan 2010; Jonathan Callen <abcd@gentoo.org> +schroot-1.4.0.ebuild,
  +files/schroot-1.4.0-tests.patch, metadata.xml:
  New upstream version

  29 Dec 2009; Jonathan Callen <abcd@gentoo.org> schroot-1.2.3-r4.ebuild:
  Fix incorrect blocker

  29 Dec 2009; Jonathan Callen <abcd@gentoo.org> metadata.xml:
  Fix package name in metadata

  26 Nov 2009; Markus Meier <maekke@gentoo.org> schroot-1.2.3-r4.ebuild:
  amd64 stable, bug #289430

  19 Nov 2009; Christian Faulhammer <fauli@gentoo.org>
  schroot-1.2.3-r4.ebuild:
  stable x86, bug 289430

*schroot-1.2.3-r4 (18 Nov 2009)

  18 Nov 2009; Jonathan Callen <abcd@gentoo.org> -schroot-1.2.3-r3.ebuild,
  +schroot-1.2.3-r4.ebuild, files/schroot.initd:
  Fix init script to actually end sessions when requested instead of recover
  them (copy & paste error)

*schroot-1.2.3-r3 (12 Nov 2009)

  12 Nov 2009; Jonathan Callen <abcd@gentoo.org> -schroot-1.2.3-r2.ebuild,
  +schroot-1.2.3-r3.ebuild, -files/schroot-1.2.3-pam.patch:
  Use pamd_mimic_system to use the primary pam configuration; drop old
  revision

  17 Oct 2009; Jonathan Callen <abcd@gentoo.org> -schroot-1.2.3-r1.ebuild,
  schroot-1.2.3-r2.ebuild:
  Clean up installation of html docs; drop old revision

*schroot-1.2.3-r2 (02 Oct 2009)

  02 Oct 2009; Jonathan Callen <abcd@gentoo.org> +schroot-1.2.3-r2.ebuild:
  Remove *.la files

  14 Sep 2009; Jonathan Callen <abcd@gentoo.org> schroot-1.2.3-r1.ebuild:
  Fix build error with FEATURES=-test (bug 284773). Thanks to Andy Kittner
  <andkit@gmx.de>. Also add RDEPEND on debianutils.

*schroot-1.2.3-r1 (14 Sep 2009)
