@@ -8,14 +8,16 @@ AUX schroot.confd 371 RMD160 d7efa36975f549304a1e8a942f6389720d1bff88 SHA1 3eaf6
 AUX schroot.initd 705 RMD160 efdb102d21137a72b20fef8882e2b15ba7dabfc6 SHA1 d585fba4d92dc6d94275e079046e4ce821183b6b SHA256 8f8537c0c6c93d1169c8a333ddd78c4471d95956cfb187e3bd6612a4ad9f78f5
 DIST schroot_1.2.3.orig.tar.gz 25486414 RMD160 2c8c4bb92c870a6c0514df528d13f73b8f1b6d05 SHA1 1775aa19e3cb3237d8aa3cc36e3382d7e2c2919b SHA256 c3bca449abdf28b66f6aede8892ce61967b5c1d758ba567e8648ccfb0cf914ec
 DIST schroot_1.4.0.orig.tar.gz 1065731 RMD160 402eda02eddb343f19c714aecc9ab20f2383ebe1 SHA1 f5a66e027c834e5e563b4a48a914e04b7ed5f553 SHA256 7f0d5a44b784c9b048aa02a3e5c3cfd393c7d92aa5b3a190007ed5fb2d30ac74
+DIST schroot_1.4.1.orig.tar.gz 1032672 RMD160 433cefe0a06174265dc1a30e967aa505fff8ef21 SHA1 796b8d6972bac9ac196696d45edfc89b9e7ecc4b SHA256 98680ec3bd579029f0f6264bc52bc47a30349f2a5b62efbd574a0d755167aed0
 EBUILD schroot-1.2.3-r4.ebuild 2151 RMD160 01379f16274370ede81a36db68a295564ddfeb3d SHA1 c3c6e1679ae91f6cdac3a76407db8eda36e16a87 SHA256 74426b94619c43dd935d39b284b123527ba2037b6f676276e14c54534800ba00
 EBUILD schroot-1.4.0.ebuild 2626 RMD160 28e747f35b77e837b3a8e2768fa0e6a6732b9a90 SHA1 9a3a194e71b409724fc05e5245e33100609025d7 SHA256 d9647f11d4214ff0c10d8c9faf8399518b2c05b5d27110cd9617bc709d4cbbfa
-MISC ChangeLog 2556 RMD160 0a2b60a7966b3a7d15235a78f51fb36c576f8d0d SHA1 0d5988aeb4e04661fd6d991466731b64dd8af5ac SHA256 c391a081eeab939532444d736087ac69356a15bc3cb63242669cd02cd681083a
+EBUILD schroot-1.4.1.ebuild 4591 RMD160 1f8bc33600c96513c79e251f7d6d99b117289996 SHA1 21cd7b7a6e547809206e12a39fb8557471721ef6 SHA256 ea92bb37c76e62a562306aad3ac190bfaa51b17a0d38760e9770eb348e24f1b9
+MISC ChangeLog 2778 RMD160 3ea597692867904c68da709893c00750101875d7 SHA1 17148661c591093cf9b8e5a69f4e66e5f2f48c7e SHA256 e5ba8ecf93aba766eea79d23a5776e739d5998a2ee9bf5f90283d7ba8d28aeab
 MISC metadata.xml 445 RMD160 33e3b17a7e5250ab10a3c7e25cbd644ac0c5dee3 SHA1 5fb67d7fbb8912b306d68551fbfc2138d17ebacd SHA256 222724ef581a733b8157a144259d0762858459ac33b0f1b28139716543693234
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAkt3J78ACgkQOypDUo0oQOqPsgCeN9gF7wJ+WIvVbbd0/TO2cmg0
-hQMAoN/LAjhglirLe54R7tjnPKYD5iGQ
-=aup2
+iEYEARECAAYFAkuIfkAACgkQOypDUo0oQOqAVACfVPRz1lWS+EbGJsy0D5inPseS
+jogAn0+NTMFsQTA6NsqPFKaqRQwmvDx+
+=12IP
 -----END PGP SIGNATURE-----
